# Roguelike-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
CMake/: FindBearLibTerminal.cmake
include/: Ireader.h  coin-manager.h  coin.h  config.h  controls.h  food-manager.h  food.h  ld-manager.h  level1.h  levelreader.h  luckydoor.h  player.h  wall-manager.h  wall.h
include/lib/ecs/: component.h  engine.h  entity.h  entity_manager.h  system.h  system_manager.h
include/lib/math/: vec2.h
include/lib/scenes/: context.h  i_scene.h  scene_manager.h
include/rog/: controls.h  math-utils.h
include/rog/components/: coin_component.h  coinbox_component.h  collider_component.h  color_component.h  control_component.h  door_component.h  enemy_component.h  enemy_control_component.h  enemy_fight_component.h  food_component.h  interface_component.h  jump_component.h  key_component.h  movement_component.h  obstacle_component.h  player_control_component.h  texture_component.h  transform_component.h  wall_component.h
include/rog/scenes/: game_over_scene.h  game_scene.h  level1_scene.h  level2_scene.h  level3_scene.h  random_level_scene.h  title_scene.h  win_scene.h
include/rog/systems/: coin_collision_system.h  (+13 more)
misc/cpplint/: README  cpplint.py
src/: coin-manager.cpp  coin.cpp  config.cpp  controls.cpp  food-manager.cpp  food.cpp  ld-manager.cpp  level1.cpp  levelreader.cpp  luckydoor.cpp  main.cpp  player.cpp  wall-manager.cpp  wall.cpp
src/levels/: leaderbord.txt  level1.txt  level2.txt  level3.txt
src/lib/: scene_manager.cpp
src/rog/: math-utils.cpp
(+22 files in other folders)
